# hetcomp

./: .gitignore  README.md
Aufgabe1/: app.py  only_statistic.py  plot_frequencies.ipynb  plot_pi.ipynb  plot_server.ipynb  plot_win.ipynb  pyproject.toml  script.py  test.ipynb
Aufgabe2/: A1.py  Cargo.toml
Aufgabe2/seq/src/: main.rs
Aufgabe2/src/: main.rs
