[tool.poetry]
name = "aufgabe1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
librosa = "^0.10.2.post1"
pandas = "^2.2.2"
tqdm = "^4.66.4"
psutil = "^5.9.8"
pyinstaller = "^6.7.0"
pyfftw = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
